<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admission">

    <RelativeLayout
        android:id="@+id/background"
        android:layout_width="368dp"
        android:layout_height="526dp"
        android:background="@color/bgCol"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/admissions"
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:contentDescription="Admissions"
            android:text="@string/admission"
            android:textSize="30sp" />

        <Spinner
            android:id="@+id/admissionchoices"
            android:layout_width="297dp"
            android:layout_height="37dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="121dp"
            android:entries="@array/admissionchoices" />

        <EditText
            android:id="@+id/tickets"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="176dp"
            android:contentDescription="Enter the number of tickets needed"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/prompt1"
            android:inputType="number" />

        <TextView
            android:id="@+id/groups"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="77dp"
            android:contentDescription="User prompt to select travel group"
            android:text="@string/groups"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btncost"
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="136dp"
            android:contentDescription="Calculate cost of admission depending on group choice and number of tickets needed"
            android:text="@string/btncost" />

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/admissionchoices"
            android:layout_marginBottom="76dp"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/membership"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:checked="false"
            android:contentDescription="Memberships allow for a 20% discount on admission prices"
            android:text="@string/membership" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>